test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/scopedname.widl
// scoped names are no longer valid in WebIDL
  typedef gfx::geom::geom2d::Point Point;
